--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -19,15 +19,6 @@ body {
     background-color: white;
 }
 
-/*.footer {*/
-    /*position: absolute;*/
-    /*bottom: 0;*/
-    /*left: 0;*/
-    /*width: 100%;*/
-    /*padding: 5px;*/
-    /*background-color: #f5f5f5;*/
-/*}*/
-
 h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
 }
@@ -47,3 +38,10 @@ h1, h2, h3, h4, h5, h6 {
 .bg-red { background-color: red; }
 .bg-blue { background-color: blue; }
 .bg-green { background-color: green; }
+
+/* color error message for easier readability */
+.error-message p {
+    font-weight: bold;
+    color: red;
+    text-align: center;
+}
