More cleanup/comments. Reorganized beer list page and header

--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -1,22 +1,22 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-    position: relative;
-    min-height: 100%;
+    /*position: relative;*/
+    /*min-height: 100%;*/
 }
 
 body {
     /* Margin bottom by footer height */
-    margin-bottom: 60px;
-    background-color: #f8f7f6;
-    color: #2c2c33;
-    font-family: "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
-    font-size: 16px;
-    line-height: 25.6px;
+    /*margin-bottom: 60px;*/
+    /*background-color: #f8f7f6;*/
+    /*color: #2c2c33;*/
+    /*font-family: "Source Sans Pro", Calibri, Candara, Arial, sans-serif;*/
+    /*font-size: 16px;*/
+    /*line-height: 25.6px;*/
 }
 
 .container {
-    background-color: white;
+    /*background-color: white;*/
 }
 
 h1, h2, h3, h4, h5, h6 {
