--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -1,23 +1,3 @@
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-    /*position: relative;*/
-    /*min-height: 100%;*/
-}
-
-body {
-    /* Margin bottom by footer height */
-    /*margin-bottom: 60px;*/
-    /*background-color: #f8f7f6;*/
-    /*color: #2c2c33;*/
-    /*font-family: "Source Sans Pro", Calibri, Candara, Arial, sans-serif;*/
-    /*font-size: 16px;*/
-    /*line-height: 25.6px;*/
-}
-
-.container {
-    /*background-color: white;*/
-}
 
 h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
@@ -30,10 +10,6 @@ h1, h2, h3, h4, h5, h6 {
 .top17 { margin-top:17px; }
 .top30 { margin-top:30px; }
 
-.jhu-blue {
-    color: #002D72;
-}
-
 /* debug colors */
 .bg-red { background-color: red; }
 .bg-blue { background-color: blue; }
@@ -44,4 +20,9 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
     color: red;
     text-align: center;
+}
+
+/* style yummly recipe view */
+.yummly-recipe {
+
 }
